--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,12 @@ img{
 /* Green button da riutilizzare più volte nella pagina */
 .green-button{
     background-color: #7cbb02;
-    padding: 10px 20px;
+    padding: 15px 20px;
     border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
 }
 /* END COMMON */
 
@@ -84,6 +88,17 @@ nav{
 }
 .menu .green-button{
     padding: 7px 10px;
+}
+
+/* Testo header */
+.title{
+    color: white;
+    margin-top: 150px;
+    width: 50%;
+}
+header h1{
+   font-size: 40px; 
+   padding-bottom: 30px;
 }
 /* END HEADER */
 
