--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,22 @@ img{
     display: inline-block;
     font-size: 12px;
 }
+
+/* Sfondo grigio da riutilizzare */
+.bg-gray{
+    background-color: #d3d3d3;
+}
+
+.gray-text{
+    color: #818181;
+    font-size: 15px;
+}
+
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
+}
 /* END COMMON */
 
 /* HEADER */
@@ -80,6 +96,9 @@ nav{
     text-transform: uppercase;
     font-size: 10px;
 }
+.menu li a:hover{
+    color: orange;
+}
 
 .login{
     border: 1px solid white;
@@ -97,11 +116,37 @@ nav{
     width: 50%;
 }
 header h1{
-   font-size: 40px; 
+   font-size: 35px; 
    padding-bottom: 30px;
 }
 /* END HEADER */
 
 /* MAIN */
+/* Sezione con titolo */
+.title-section{
+    text-align: center;
+    padding: 30px 0;
+}
+.title-section h2{
+    font-size: 21px;
+    padding-bottom: 10px;
+}
+
+/* Sezione con le tre colonne */
+main .col-left{
+    width: 30%;
+}
+main .col-center{
+    width: 30%;
+    margin: 0 5%;
+}
+main .col-right{
+    width: 30%;
+}
+
+.img-container img{
+    height: 150px;
+}
+
 /* END MAIN */
 
