--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@ img{
 
 .gray-text{
     color: #818181;
-    font-size: 15px;
+    font-size: 13px;
+    text-align: center;
+    line-height: 20px;
 }
 
 .clearfix::after{
@@ -145,7 +147,22 @@ main .col-right{
 }
 
 .img-container img{
-    height: 150px;
+    height: 120px;
+    margin: 30px 0 20px 0;
+}
+
+.content .green-title{
+    color: #7cbb02;
+    text-align: center;
+    line-height: 25px;
+    padding-bottom: 15px;
+}
+.content p{
+    padding-top: 15px;
+}
+.content hr{
+    width: 20%;
+    margin: auto;
 }
 
 /* END MAIN */
