--- a/css/style.css
+++ b/css/style.css
@@ -148,14 +148,13 @@ main .col-right{
 
 .img-container img{
     height: 120px;
-    margin: 30px 0 20px 0;
 }
 
 .content .green-title{
     color: #7cbb02;
     text-align: center;
     line-height: 25px;
-    padding-bottom: 15px;
+    padding: 20px 0;
 }
 .content p{
     padding-top: 15px;
@@ -165,5 +164,9 @@ main .col-right{
     margin: auto;
 }
 
+.columns{
+    padding: 30px 0;
+    border-bottom: 1px solid #d3d3d3;
+}
 /* END MAIN */
 
